--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cra-template-skochdev-ts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skochdev.github.io/cra-template-skochdev-ts",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -17,10 +18,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-system": "^5.1.15",
+    "styled-components": "^5.3.5",
+    "styled-system": "^5.1.5",
+    "eslint": "^8.22.0",
+    "gh-pages": "^4.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "modern-normalize": "^1.1.0",
+    "prettier": "^2.7.1",
+    "react-icons": "^4.4.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": "eslint --cache --fix",
+    "*.{js,css,md,html,scss}": "prettier --write"
   }
 }
