--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,26 @@
-name: Build and deploy to GitHub Pages
+name: Build and Deploy
+on:
+  push:
+    branches:
+      - "master"
+
 
 permissions:
   contents: write
-
-on:
-  push:
-    branches: [main]
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v3
 
-      - name: Install, lint, build 🔧
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
-          npm install
-          npm run lint:js
+          npm ci
           npm run build
 
       - name: Deploy 🚀
-        uses: JamesIves/.github-pages-deploy-action@4.1.0
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: build
+          folder: build # The folder the action should deploy.
